test/regression/sema/valid/while_true_return.tc
int main() {
    while (1) {
        return 7;
    }
}
