test/regression/sema/invalid/void_as_value.tc
void noop() {
    return;
}

int main() {
    return noop();
}
